--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     "guzzlehttp/guzzle": "^7.7",
     "ext-json": "*",
     "nette/utils": ">=3",
-    "nette/di": "^3.1",
-    "orisai/coding-standard": "^3.8"
+    "nette/di": "^3.1"
   },
   "require-dev": {
+    "orisai/coding-standard": "^3.8",
     "slevomat/coding-standard": "^8.13",
     "squizlabs/php_codesniffer": "^3.7",
     "phpstan/phpstan": "^1.0.0",
