--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     "guzzlehttp/psr7": "^2.4.4",
     "guzzlehttp/guzzle": "^7.7",
     "ext-json": "*",
-    "nette/utils": ">=3",
-    "nette/di": "^3.1"
+    "nette/utils": ">=3"
   },
   "require-dev": {
     "orisai/coding-standard": "^3.8",
